--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>responsive architect websire
-
-    </title>
+    <title>responsive architect website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="sniglet-regular">
-    <header>    
-
+<body class="copse-regular">
+    <header class="header">    
+<nav class="navbar display-flex">
+<h3 class="brand"> X Architect </h3>
+<ul class="nav display-flex">
+    <li class="nav-item"><a href="" class="nav-link"></a>Home</li>
+    <li class="nav-item"><a href="" class="nav-link"></a>About</li>
+    <li class="nav-item"><a href="" class="nav-link"></a>Contact Us</li>
+    <li class="nav-item"><a href="" class="nav-link"></a>Login</li>
+</ul>
+</nav>
+<div class="banner">
+<h1 class="baner-title">Brand New Group of Architects</h1>
+<div class="banner-content">
+    <p class="baner-descrption">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic iste nostrum laboriosam rem earum corporis praesentium quidem vero qui veritatis totam natus sint facilis sequi quo sit eveniet magni amet iure expedita tenetur, minus soluta itaque et. Minus, voluptate inventore!</p>
+<button class="btn-prim">Explore More</button>
+</div>
+<img class="baner-img" src="./images/banner.png" alt="">
+</div>
     </header>
     <main>
 
